load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

cc_library(
    name = "wrapper",
    hdrs = ["wrapper.h"]
)

cc_library(
    name = "incomplete_types",
    hdrs = ["incomplete_types.h"],
    srcs = ["incomplete_types.cc"],
    deps = ["wrapper"]
)

cc_test(
    name = "incomplete_types_test",
    srcs = ["incomplete_types_test.cc"],
    deps= [
        "incomplete_types",
        "@com_google_googletest//:gtest_main",
    ]
)

cc_library(
    name = "traits_and_concepts",
    srcs = ["traits_and_concepts.cc"],
    visibility = ["//visibility:private"],
)

build_test(
    name = "traits_and_concepts_build_test",
    targets = ["traits_and_concepts"],
)
